fixing teacher review styles on tablets

--- a/tutor/resources/styles/components/task-step/index.less
+++ b/tutor/resources/styles/components/task-step/index.less
@@ -11,7 +11,7 @@
   .exercise-typography();
   padding: @tutor-card-body-padding;
   @media (max-width: @tutor-card-padding-collapse-breakpoint) {
-    padding: @tutor-card-body-padding-vertical @tutor-card-body-narrow-padding-horizontal;
+    padding: @tutor-card-body-narrow-padding;
   }
 }
 
